Finalized landing page

--- a/index.html
+++ b/index.html
@@ -28,14 +28,35 @@
             See what our satisfied customers are saying about our services.</p>
         </div>
         <div class="content-right">
-          <div class="star-reviews">
-            <img src="images/icon-star.svg" alt="5 star review"/><h3>Rated 5 Stars in Reviews</h3>
+          <div class="star-reviews div1">
+            <div class="stars-img">
+              <img src="images/icon-star.svg" alt="simple star"/>
+              <img src="images/icon-star.svg" alt="simple star"/>
+              <img src="images/icon-star.svg" alt="simple star"/>
+              <img src="images/icon-star.svg" alt="simple star"/>
+              <img src="images/icon-star.svg" alt="simple star"/>
+            </div>
+            <h3>Rated 5 Stars in Reviews</h3>
           </div>
-          <div class="star-reviews">
-            <img src="images/icon-star.svg" alt="5 star review"/><h3>Rated 5 Stars in Report Guru</h3>
+          <div class="star-reviews div2">
+            <div class="stars-img">
+              <img src="images/icon-star.svg" alt="simple star"/>
+              <img src="images/icon-star.svg" alt="simple star"/>
+              <img src="images/icon-star.svg" alt="simple star"/>
+              <img src="images/icon-star.svg" alt="simple star"/>
+              <img src="images/icon-star.svg" alt="simple star"/>
+            </div>
+            <h3>Rated 5 Stars in Report Guru</h3>
           </div>
-          <div class="star-reviews">
-            <img src="images/icon-star.svg" alt="5 star review"/><h3>Rated 5 Stars in BestTech</h3>
+          <div class="star-reviews div3">
+            <div class="stars-img">
+              <img src="images/icon-star.svg" alt="simple star"/>
+              <img src="images/icon-star.svg" alt="simple star"/>
+              <img src="images/icon-star.svg" alt="simple star"/>
+              <img src="images/icon-star.svg" alt="simple star"/>
+              <img src="images/icon-star.svg" alt="simple star"/>
+            </div>
+            <h3>Rated 5 Stars in BestTech</h3>
           </div>
         </div>
       </div>
@@ -57,7 +78,7 @@
           </div>
         </div>
 
-        <div class="review-card">
+        <div class="review-card rev2">
           <div class="user">
             <img src="images/image-irene.jpg" alt="anne-picture"/>
             <div class="name-position">
@@ -71,7 +92,7 @@
           </div>
         </div>
 
-        <div class="review-card">
+        <div class="review-card rev3">
           <div class="user">
             <img src="images/image-anne.jpg" alt="anne-picture"/>
             <div class="name-position">
